--- a/.gitignore
+++ b/.gitignore
@@ -1,44 +1,14 @@
-# Build results
-[Dd]ebug/
-[Dd]ebugPublic/
-[Rr]elease/
-[Rr]eleases/
-x64/
-x86/
-[Ww][Ii][Nn]32/
-[Aa][Rr][Mm]/
-[Aa][Rr][Mm]64/
-bld/
-[Bb]in/
-[Oo]bj/
-[Ll]og/
-[Ll]ogs/
-
 # Visual Studio
 .vs/
+bin/
+obj/
+
+# Arquivos temporários
 *.user
-*.userosscache
-*.sln.docstates
 *.suo
 *.tmp
+*.log
 
-# Test results
-TestResults/
-*.trx
-*.coverage
-*.coveragexml
-
-# NuGet
-*.nupkg
-*.snupkg
-packages/
-.nuget/
-
-# .NET Core
-project.lock.json
-project.fragment.lock.json
-artifacts/
-
-# OS
-.DS_Store
-Thumbs.db
+# Resultados de build
+Debug/
+Release/
